# vrclogunrotate

./: Cargo.toml  build.rs  embed_resources.rc
src/: main.rs
